# prompt-priming-blog

./: .gitignore  README.md  pyproject.toml
experiments/: __init__.py
experiments/countdown/: __init__.py
experiments/countdown/rl/: __init__.py  analyze.py  inference.py  train.py
experiments/reasoning_gym/: __init__.py  prompting.py  rl_env.py
experiments/rl_common/: __init__.py  core.py  reasoning_gym_runner.py
